--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
   </head>
   <body>
     <header>
-      <ul>
+      <ul class="pc">
         <li><a href="#">Product</a></li>
         <li><a href="#">OEM·OCM</a></li>
         <li><a href="#">Brand Story</a></li>
       </ul>
-      <h1>
+      <h1 class="pc">
         <a href="#"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
       </h1>
-      <ul>
+      <ul class="pc">
         <li>
           <a href="#">Membership</a>
         </li>
@@ -47,6 +47,17 @@
         </li>
         <li>
           <a href="#"><i class="fa-solid fa-globe"></i></a>
+        </li>
+      </ul>
+      <h1 class="mobile">
+        <a href="#"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
+      </h1>
+      <ul class="mobile">
+        <li>
+          <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-solid fa-bars"></i></a>
         </li>
       </ul>
     </header>
@@ -126,6 +137,18 @@
         </li>
       </ul>
     </section>
+    <div class="marquee-container">
+      <p class="marquee-text">
+        Meet our skin-loving body moisturizers. From instantly absorbing body
+        yogurts that provide 48 hours of hydration to creamy lotions and our
+        richer Body Butters that lock in 96 hours of moisture.
+        <span class="repeat-text"
+          >Meet our skin-loving body moisturizers. From instantly absorbing body
+          yogurts that provide 48 hours of hydration to creamy lotions and our
+          richer Body Butters that lock in 96 hours of moisture.</span
+        >
+      </p>
+    </div>
     <section class="con3">
       <ul>
         <li>
@@ -182,27 +205,61 @@
       <h3>Treat Your Skin Concern with The Body Shop</h3>
       <ul>
         <li>
+          <a href="#"><img src="img/skincare5.jpg" alt="바디케어 이미지" /></a>
+          <p>body Care</p>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="img/skincare2.jpg" alt="클렌징케어 이미지"
+          /></a>
+          <p>Cleansing care</p>
+        </li>
+        <li>
+          <a href="#"><img src="img/skincare3.PNG" alt="보습케어 이미지" /></a>
+          <p>Moisturizing care</p>
+        </li>
+        <li>
+          <a href="#"><img src="img/skincare4.jpg" alt="헤어케어 이미지" /></a>
+          <p>Hair Care</p>
+        </li>
+        <li>
           <a href="#"><img src="img/skincare1.jpg" alt="스킨케어 이미지" /></a>
-          <p>Skin Care</p>
-        </li>
-        <li>
-          <a href="#"><img src="img/skincare2.jpg" alt="스킨케어 이미지" /></a>
-          <p>Skin Care</p>
-        </li>
-        <li>
-          <a href="#"><img src="img/skincare3.PNG" alt="스킨케어 이미지" /></a>
-          <p>Skin Care</p>
-        </li>
-        <li>
-          <a href="#"><img src="img/skincare1.jpg" alt="스킨케어 이미지" /></a>
-          <p>Skin Care</p>
-        </li>
-        <li>
-          <a href="#"><img src="img/skincare2.jpg" alt="스킨케어 이미지" /></a>
           <p>Skin Care</p>
         </li>
       </ul>
     </section>
-    <footer></footer>
+    <footer>
+      <ul>
+        <li>
+          The Body Shop is present in more than 80 countries, with around 2,500
+          stores.We are a B Corp certified global beauty brand and the first
+          with 100% vegan product formulations certified by The Vegan Society.
+        </li>
+        <li>
+          <div>
+            <h3><a href="#">The Body Shop</a></h3>
+            <h4><a href="#">Brand Story</a></h4>
+            <h4><a href="#">OEM · OCM</a></h4>
+          </div>
+          <div>
+            <h3><a href="#">Product</a></h3>
+            <h4><a href="#">Best Sellers</a></h4>
+            <h4><a href="#">All Products</a></h4>
+          </div>
+          <div>
+            <h3><a href="#">Help</a></h3>
+            <h4><a href="#">FAQ</a></h4>
+            <h4><a href="#">Contact Us</a></h4>
+          </div>
+          <div class="sns">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a href="#"><i class="fa-solid fa-comment"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          </div>
+        </li>
+      </ul>
+      <div>© 2024 The Body Shop International Limited</div>
+    </footer>
   </body>
 </html>
