--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <ul class="pc">
         <li><a href="#">Product</a></li>
         <li><a href="#">OEM·OCM</a></li>
-        <li><a href="#">Brand Story</a></li>
+        <li><a href="brandStory.html">Brand Story</a></li>
       </ul>
       <h1 class="pc">
         <a href="#"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
@@ -159,7 +159,7 @@
             <li>
               <a href="#"
                 ><img src="img/texture1.png" alt="크림 제형" />
-                <p>DE-AGING</p></a
+                <p>MOISTUERIZING</p></a
               >
             </li>
           </ul>
