--- a/product.html
+++ b/product.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brand Story</title>
+    <title>Product</title>
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/brandStory.css" />
+    <link rel="stylesheet" href="css/product.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
@@ -57,74 +57,42 @@
     <div class="title">
       <ul>
         <li>
-          <a href="#"><img src="img/brandStory.jpg" alt="모링가 바디세트" /></a>
+          <h2>Product</h2>
+          <p>
+            더 좋은 원료와 자연 유래 성분이 포함된 제품을 사용해 <br />피부와
+            내면의 긍정적인 변화를 경험해보세요
+          </p>
         </li>
         <li>
-          <h2>Brand Story</h2>
-          <p>
-            더바디샵은 전하고 싶은 이야기가 많은 브랜드입니다. <br />
-            우리의 믿음과 이념을 알아보세요.
-          </p>
+          <a href="#"
+            ><img src="img/product_title.jpg" alt="티트리라인 세트"
+          /></a>
         </li>
       </ul>
     </div>
     <section class="con1">
-      <h3>
-        CHANGEMAKING <br />
-        BEAUTY
-      </h3>
-      <h4>Effective. Ethical. Vegan.</h4>
-      <ul>
-        <li class="line"></li>
-        <li>
-          <h3>FOR ME</h3>
-          <p>나를 위한 변화</p>
-        </li>
-        <li class="line"></li>
-        <li>
-          <h3>FOR COMMUNITY</h3>
-          <p>모두를 위한 변화</p>
-        </li>
-        <li class="line"></li>
-        <li>
-          <h3>FOR THE EARTH</h3>
-          <p>지구를 위한 변화</p>
-        </li>
-        <li class="line"></li>
-      </ul>
-      <div>
-        <div class="line"></div>
-        <h3>
-          ChangeMaking Beauty <br />
-          <span>변화를 만드는 아름다움</span>
-        </h3>
-        <p>
-          지구의 보호와 세상의변화를 위해 우리는 자연과 함께 합니다.
-          <br />변화를 만드는 아름다움은 당신으로부터 시작됩니다.
-        </p>
-      </div>
-    </section>
-    <section class="con2">
       <ul>
         <li>
-          <a href="#"><img src="img/pureimg.jpg" alt="" /></a>
-          <h4>베지테리언 제품</h4>
-          <p>
-            베지테리언 제품이란 의도적으로 동물을 죽여서 얻은 원료를 사용하지
-            않는 제품입니다. <br />
-            하지만 꿀이나 비즈왁스같이 동물을 죽이지 않고 얻어진 동물성 원료는
-            사용될 수 있습니다.
-          </p>
+          <a href="#"
+            ><img src="img/product_cream.jpg" alt="에델바이스 슬리핑크림"
+          /></a>
         </li>
         <li>
-          <h3>For pure beauty</h3>
-          <a href="#"><img src="img/pureimg2.jpg" alt="" /></a>
-          <h4>비건 제품</h4>
-          <p>
-            비건 제품은 동물 유래 원료를 전혀 사용하지 않은 제품을 의미합니다.
-            <br />
-            더바디샵은 진정한 비건 뷰티를 실천하기 위해 노력합니다.
-          </p>
+          <ul class="con1_right">
+            <li>
+              <p>
+                더 바디샵 스킨케어 제품은 모든 피부 타입을 <br />만족시키기 위해
+                다양하게 준비되어 있습니다. <br />
+                세계에서 공급받은 원료를 <br />통해 확실한 효과를 확인해보세요.
+              </p>
+              <a href="#"
+                ><img src="img/product_wash.jpg" alt="모링가 바디워시"
+              /></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/product_oil.jpg" alt="티트리오일" /></a>
+            </li>
+          </ul>
         </li>
       </ul>
     </section>
@@ -140,6 +108,40 @@
         >
       </p>
     </div>
+    <section class="con2">
+      <ul>
+        <li>
+          <h3>Vegan & Veggie-Terian</h3>
+          <p>내 피부를 위한 선택 자연유래성분, 비건 그리고 베지테리언</p>
+        </li>
+        <li>
+          <ul class="con2_right">
+            <li>
+              <p>
+                더바디샵의 일부 제품의 자연유래 성분은 <br />
+                식물이나 미네랄로부터 나오지만, <br />
+                안전성을 강화하기 위해 <br />특정 방법을 통해 가공된 것입니다.
+              </p>
+              <a href="#"
+                ><img src="img/texture2.png.png" alt="앰플 질감이미지"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="img/spoid.jpg" alt="앰플 스포이드이미지"
+              /></a>
+              <p>( MORE PRODUCTS )</p>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section class="con3">
+      <div class="wrap">
+        <h3>"The effect of tea tree on your skin."</h3>
+        <p>Meet the Small but Powerful Tea Tree!</p>
+      </div>
+    </section>
     <footer>
       <ul>
         <li>
