--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>The Body Shop</title>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/main.js"></script>
     <link
@@ -28,12 +28,12 @@
   <body>
     <header>
       <ul class="pc">
-        <li><a href="#">Product</a></li>
+        <li><a href="product.html">Product</a></li>
         <li><a href="#">OEM·OCM</a></li>
         <li><a href="brandStory.html">Brand Story</a></li>
       </ul>
       <h1 class="pc">
-        <a href="#"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
+        <a href="index.html"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
       </h1>
       <ul class="pc">
         <li>
