--- a/product.html
+++ b/product.html
@@ -130,7 +130,7 @@
               <a href="#"
                 ><img src="img/spoid.jpg" alt="앰플 스포이드이미지"
               /></a>
-              <p>( MORE PRODUCTS )</p>
+              <p><a href="#">( MORE PRODUCTS )</a></p>
             </li>
           </ul>
         </li>
