--- a/brandStory.html
+++ b/brandStory.html
@@ -22,7 +22,7 @@
     <header>
       <ul class="pc">
         <li><a href="product.html">Product</a></li>
-        <li><a href="#">OEM·OCM</a></li>
+        <li><a href="oemocm.html">OEM·OCM</a></li>
         <li><a href="brandStory.html">Brand Story</a></li>
       </ul>
       <h1 class="pc">
@@ -30,10 +30,12 @@
       </h1>
       <ul class="pc">
         <li>
-          <a href="#">Membership</a>
+          <a href="membership.html">Membership</a>
         </li>
         <li class="down">
-          <a href="#">Community<i class="fa-solid fa-chevron-down"></i></a>
+          <a href="community.html"
+            >Community<i class="fa-solid fa-chevron-down"></i
+          ></a>
         </li>
         <li>
           <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
@@ -149,19 +151,19 @@
         </li>
         <li>
           <div>
-            <h3><a href="#">The Body Shop</a></h3>
-            <h4><a href="#">Brand Story</a></h4>
-            <h4><a href="#">OEM · OCM</a></h4>
+            <h3><a href="index.html">The Body Shop</a></h3>
+            <h4><a href="brandStory.html">Brand Story</a></h4>
+            <h4><a href="oemocm.html">OEM · OCM</a></h4>
           </div>
           <div>
-            <h3><a href="#">Product</a></h3>
-            <h4><a href="#">Best Sellers</a></h4>
-            <h4><a href="#">All Products</a></h4>
+            <h3><a href="product.html">Product</a></h3>
+            <h4><a href="product.html">Best Sellers</a></h4>
+            <h4><a href="product.html">All Products</a></h4>
           </div>
           <div>
-            <h3><a href="#">Help</a></h3>
-            <h4><a href="#">FAQ</a></h4>
-            <h4><a href="#">Contact Us</a></h4>
+            <h3><a href="community.html">Help</a></h3>
+            <h4><a href="community.html">FAQ</a></h4>
+            <h4><a href="community.html">Contact Us</a></h4>
           </div>
           <div class="sns">
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
