--- a/membership.html
+++ b/membership.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product</title>
+    <title>Brand Story</title>
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/product.css" />
+    <link rel="stylesheet" href="css/membership.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
@@ -59,90 +59,118 @@
     <div class="title">
       <ul>
         <li>
-          <h2>Product</h2>
-          <p>
-            더 좋은 원료와 자연 유래 성분이 포함된 제품을 사용해 <br />피부와
-            내면의 긍정적인 변화를 경험해보세요
-          </p>
+          <a href="#"
+            ><img src="img/membership_tit.jpg" alt="더바디샵 퍼퓸세트"
+          /></a>
         </li>
         <li>
-          <a href="#"
-            ><img src="img/product_title.jpg" alt="티트리라인 세트"
-          /></a>
+          <h2>Membership</h2>
+          <p>
+            전세계 더바디샵 멤버십 프로그램의 이름으로, 원하시는 고객님이면
+            누구나 가입할 수 있습니다. <br />더바디샵 회원만이 누릴 수 있는
+            다양하고, 풍성한 혜택을 지금 만나보세요!
+          </p>
         </li>
       </ul>
     </div>
     <section class="con1">
-      <ul>
-        <li>
-          <a href="#"
-            ><img src="img/product_cream.jpg" alt="에델바이스 슬리핑크림"
-          /></a>
-        </li>
-        <li>
-          <ul class="con1_right">
-            <li>
-              <p>
-                더 바디샵 스킨케어 제품은 모든 피부 타입을 <br />만족시키기 위해
-                다양하게 준비되어 있습니다. <br />
-                세계에서 공급받은 원료를 <br />통해 확실한 효과를 확인해보세요.
-              </p>
-              <a href="#"
-                ><img src="img/product_wash.jpg" alt="모링가 바디워시"
-              /></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/product_oil.jpg" alt="티트리오일" /></a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-    <div class="marquee-container">
-      <p class="marquee-text">
-        Meet our skin-loving body moisturizers. From instantly absorbing body
-        yogurts that provide 48 hours of hydration to creamy lotions and our
-        richer Body Butters that lock in 96 hours of moisture.
-        <span class="repeat-text"
-          >Meet our skin-loving body moisturizers. From instantly absorbing body
-          yogurts that provide 48 hours of hydration to creamy lotions and our
-          richer Body Butters that lock in 96 hours of moisture.</span
-        >
+      <h3>
+        LOVE YOUR BODY<span></span> with<br />
+        + The<span></span> Body Shop
+      </h3>
+      <p>
+        더바디샵 포인트는 오프라인 매장 및 쇼핑몰에서 제품 구매시 적립됩니다.
+        <br />
+        더바디샵 포인트로 즐기는 다양한 혜택을 놓치지 마세요.
       </p>
-    </div>
+      <div>
+        <a href="#"
+          ><img src="img/membership_con1.jpg" alt="더바디샵 바디워시 세트"
+        /></a>
+        <h4>Keep your body for a long time</h4>
+      </div>
+    </section>
     <section class="con2">
-      <ul>
+      <ul class="line">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <ul class="txt">
         <li>
-          <h3>Vegan & Veggie-Terian</h3>
-          <p>내 피부를 위한 선택 자연유래성분, 비건 그리고 베지테리언</p>
+          <h3>골드멤버</h3>
+          <p class="member">
+            클럽 전환 후, <br />최근 1년간 60만원 이상, <br />6회 이상 구매 시
+          </p>
+
+          <h4>상시 할인 혜택</h4>
+          <p>정상가 전제품 10% 할인<br />기간한정으로 누리는 특별 할인 세트</p>
+
+          <h4>웰컴 선물</h4>
+          <p>30,000원 쿠폰</p>
+
+          <h4>포인트 적립</h4>
+          <p>결제금액의 5%</p>
         </li>
         <li>
-          <ul class="con2_right">
-            <li>
-              <p>
-                더바디샵의 일부 제품의 자연유래 성분은 <br />
-                식물이나 미네랄로부터 나오지만, <br />
-                안전성을 강화하기 위해 <br />특정 방법을 통해 가공된 것입니다.
-              </p>
-              <a href="#"
-                ><img src="img/texture2.png.png" alt="앰플 질감이미지"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="img/spoid.jpg" alt="앰플 스포이드이미지"
-              /></a>
-              <p><a href="#">( MORE PRODUCTS )</a></p>
-            </li>
-          </ul>
+          <h3>클럽멤버</h3>
+          <p class="member">최근 1년간 20만원 이상 구매 시</p>
+
+          <h4>상시 할인 혜택</h4>
+          <p>스킨케어 제품 10% 할인 <br />기간한정으로 누리는 특별 할인 세트</p>
+
+          <h4>웰컴 선물</h4>
+          <p>10,000원 쿠폰</p>
+
+          <h4>포인트 적립</h4>
+          <p>결제금액의 3%</p>
+        </li>
+        <li>
+          <h3>바디러브멤버</h3>
+          <p class="member">가입 후 구매시</p>
+
+          <h4>상시 할인 혜택</h4>
+          <p>기간한정으로 누리는 특별 할인 세트</p>
+
+          <h4>웰컴 선물</h4>
+          <p>10,000원 쿠폰</p>
+
+          <h4>포인트 적립</h4>
+          <p>결제금액의 2%</p>
+        </li>
+        <li>
+          <h3>웹멤버</h3>
+          <p class="member">가입 시</p>
+
+          <h4>웰컴 선물</h4>
+          <p>
+            온라인 첫구매 무료배송 <br />
+            웰빙포인트 통합 회원 가입 시, <br />최대 2,500 포인트 즉시 증정<br />
+            오프라인 매장 10% 할인 쿠폰
+            <br />온라인몰 10% 할인 쿠폰
+          </p>
         </li>
       </ul>
     </section>
     <section class="con3">
-      <div class="wrap">
-        <h3>"The effect of tea tree on your skin."</h3>
-        <p>Meet the Small but Powerful Tea Tree!</p>
-      </div>
+      <ul>
+        <li>
+          <a href="#"><img src="img/icon_coupon.png" alt="쿠폰아이콘" /></a>
+          <div>
+            <h3>더바디샵 멤버십 신규가입 쿠폰</h3>
+
+            <p>발급일로부터 14일</p>
+          </div>
+        </li>
+        <li>
+          <a href="#"><img src="img/icon_mirro.png" alt="쿠폰아이콘" /></a>
+          <div>
+            <h3>온라인 첫구매 무료배송</h3>
+            <p>첫구매 1회 한정</p>
+          </div>
+        </li>
+      </ul>
     </section>
     <footer>
       <ul>
