--- a/membership.html
+++ b/membership.html
@@ -158,16 +158,16 @@
         <li>
           <a href="#"><img src="img/icon_coupon.png" alt="쿠폰아이콘" /></a>
           <div>
-            <h3>더바디샵 멤버십 신규가입 쿠폰</h3>
+            <h3><a href="#">더바디샵 멤버십 신규가입 쿠폰</a></h3>
 
-            <p>발급일로부터 14일</p>
+            <p><a href="#">발급일로부터 14일</a></p>
           </div>
         </li>
         <li>
           <a href="#"><img src="img/icon_mirro.png" alt="쿠폰아이콘" /></a>
           <div>
-            <h3>온라인 첫구매 무료배송</h3>
-            <p>첫구매 1회 한정</p>
+            <h3><a href="#">온라인 첫구매 무료배송</a></h3>
+            <p><a href="#">첫구매 1회 한정</a></p>
           </div>
         </li>
       </ul>
