--- a/community.html
+++ b/community.html
@@ -113,7 +113,9 @@
               >
             </h4>
           </div>
-          <span><i class="fa-solid fa-plus"></i></span>
+          <span
+            ><a href="#"><i class="fa-solid fa-plus"></i></a
+          ></span>
         </li>
         <li>
           <div>
@@ -125,7 +127,9 @@
               >
             </h4>
           </div>
-          <span><i class="fa-solid fa-plus"></i></span>
+          <span
+            ><a href="#"><i class="fa-solid fa-plus"></i></a
+          ></span>
         </li>
 
         <li>
@@ -135,7 +139,9 @@
               <a href="#">주문한 내역은 어디서 확인 하나요?</a>
             </h4>
           </div>
-          <span><i class="fa-solid fa-plus"></i></span>
+          <span
+            ><a href="#"><i class="fa-solid fa-plus"></i></a
+          ></span>
         </li>
         <li>
           <div>
@@ -144,7 +150,9 @@
               <a href="#">LYB 회원 혜택은 무엇이 있나요?</a>
             </h4>
           </div>
-          <span><i class="fa-solid fa-plus"></i></span>
+          <span
+            ><a href="#"><i class="fa-solid fa-plus"></i></a
+          ></span>
         </li>
       </ul>
     </section>
