--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>The Body Shop</title>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
@@ -66,7 +68,8 @@
     <div class="visual">
       <div class="wrap">
         <h2>Body, Your Life</h2>
-        <a href="#"><img src="img/visual.JPG" alt="" /></a>
+        <p><span>ChangeMaking Beauty</span> <br />변화를 만드는 아름다움</p>
+        <img src="img/visual.JPG" alt="" />
       </div>
     </div>
     <section class="con1">
@@ -159,10 +162,8 @@
               <a href="#"><img src="img/texture3.png.png" alt="크림 제형" /></a>
             </li>
             <li>
-              <a href="#"
-                ><img src="img/texture1.png" alt="크림 제형" />
-                <p>MOISTUERIZING</p></a
-              >
+              <a href="#"><img src="img/texture1.png" alt="크림 제형" /> </a>
+              <p>MOISTURIZING</p>
             </li>
           </ul>
         </li>
