--- a/index.html
+++ b/index.html
@@ -264,5 +264,8 @@
       </ul>
       <div>© 2024 The Body Shop International Limited</div>
     </footer>
+    <script>
+      gsap.registerPlugin(ScrollTrigger);
+    </script>
   </body>
 </html>
