--- a/product.html
+++ b/product.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/product.js"></script>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/product.css" />
     <link
@@ -83,8 +85,8 @@
           <ul class="con1_right">
             <li>
               <p>
-                더 바디샵 스킨케어 제품은 모든 피부 타입을 <br />만족시키기 위해
-                다양하게 준비되어 있습니다. <br />
+                더 바디샵 스킨케어 제품은 <br />모든 피부 타입을
+                <br />만족시키기 위해 다양하게 <br />준비되어 있습니다. <br />
                 세계에서 공급받은 원료를 <br />통해 확실한 효과를 확인해보세요.
               </p>
               <a href="#"
