--- a/index.html
+++ b/index.html
@@ -21,41 +21,84 @@
       href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Gabarito:wght@400..900&family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <header>
-      <ul class="pc">
-        <li><a href="product.html">Product</a></li>
-        <li><a href="oemocm.html">OEM·OCM</a></li>
-        <li><a href="brandStory.html">Brand Story</a></li>
-      </ul>
-      <h1 class="pc">
-        <a href="index.html"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
-      </h1>
-      <ul class="pc">
-        <li>
-          <a href="membership.html">Membership</a>
-        </li>
-        <li class="down">
-          <a href="community.html"
-            >Community<i class="fa-solid fa-chevron-down"></i
-          ></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-solid fa-globe"></i></a>
-        </li>
-      </ul>
+      <div class="pc">
+        <ul>
+          <li><a href="product.html">Product</a></li>
+          <li><a href="oemocm.html">OEM·OCM</a></li>
+          <li><a href="brandStory.html">Brand Story</a></li>
+        </ul>
+        <h1>
+          <a href="index.html"
+            ><img src="img/logo.png" alt="더 바디샵 로고"
+          /></a>
+        </h1>
+        <ul>
+          <li>
+            <a href="membership.html">Membership</a>
+          </li>
+          <li class="down">
+            <a href="community.html"
+              >Community<i class="fa-solid fa-chevron-down"></i
+            ></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+          </li>
+          <li class="bar">
+            <a href="#"><i class="fa-solid fa-bars"></i></a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="menu_wrap">
+        <ul class="menu">
+          <li>
+            <a href="product.html">Product</a>
+            <ul class="sub_menu">
+              <li><a href="product.html">Best Seller</a></li>
+              <li><a href="product.html">All Products</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="oemocm.html">OEM·OCM</a>
+            <ul class="sub_menu">
+              <li><a href="oemocm.html">Best Seller</a></li>
+              <li><a href="oemocm.html">All Products</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="brandStory.html">Brand Story</a>
+            <ul class="sub_menu">
+              <li><a href="brandStory.html">Best Seller</a></li>
+              <li><a href="brandStory.html">All Products</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="membership.html">Membership</a>
+            <ul class="sub_menu">
+              <li><a href="membership.html">Best Seller</a></li>
+              <li><a href="membership.html">All Products</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="community.html">Community</a>
+            <ul class="sub_menu">
+              <li><a href="community.html">Best Seller</a></li>
+              <li><a href="community.html">All Products</a></li>
+            </ul>
+          </li>
+        </ul>
+        <div class="close">
+          <a href="javascript:void(0)"><i class="fa-solid fa-xmark"></i></a>
+        </div>
+      </div>
       <h1 class="mobile">
-        <a href="#"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
+        <a href="index.html"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
       </h1>
       <ul class="mobile">
         <li>
