--- a/brandStory.html
+++ b/brandStory.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brand Story</title>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/brandStory.js"></script>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/brandStory.css" />
     <link
