--- a/index.html
+++ b/index.html
@@ -97,17 +97,22 @@
           <a href="javascript:void(0)"><i class="fa-solid fa-xmark"></i></a>
         </div>
       </div>
-      <h1 class="mobile">
-        <a href="index.html"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
-      </h1>
-      <ul class="mobile">
-        <li>
-          <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-solid fa-bars"></i></a>
-        </li>
-      </ul>
+
+      <div class="mobile">
+        <h1>
+          <a href="index.html"
+            ><img src="img/logo.png" alt="더 바디샵 로고"
+          /></a>
+        </h1>
+        <ul>
+          <li>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+          </li>
+          <li class="bar">
+            <a href="#"><i class="fa-solid fa-bars"></i></a>
+          </li>
+        </ul>
+      </div>
     </header>
     <div class="visual">
       <div class="wrap">
