--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <link rel="short icon" href="#" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <link
       rel="stylesheet"
@@ -54,7 +55,6 @@
           </li>
         </ul>
       </div>
-
       <div class="menu_wrap">
         <ul class="menu">
           <li>
