--- a/brandStory.html
+++ b/brandStory.html
@@ -22,41 +22,92 @@
   </head>
   <body>
     <header>
-      <ul class="pc">
-        <li><a href="product.html">Product</a></li>
-        <li><a href="oemocm.html">OEM·OCM</a></li>
-        <li><a href="brandStory.html">Brand Story</a></li>
-      </ul>
-      <h1 class="pc">
-        <a href="index.html"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
-      </h1>
-      <ul class="pc">
-        <li>
-          <a href="membership.html">Membership</a>
-        </li>
-        <li class="down">
-          <a href="community.html"
-            >Community<i class="fa-solid fa-chevron-down"></i
-          ></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-solid fa-globe"></i></a>
-        </li>
-      </ul>
-      <h1 class="mobile">
-        <a href="#"><img src="img/logo.png" alt="더 바디샵 로고" /></a>
-      </h1>
-      <ul class="mobile">
-        <li>
-          <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-solid fa-bars"></i></a>
-        </li>
-      </ul>
+      <div class="pc">
+        <ul>
+          <li><a href="product.html">Product</a></li>
+          <li><a href="oemocm.html">OEM·OCM</a></li>
+          <li><a href="brandStory.html">Brand Story</a></li>
+        </ul>
+        <h1>
+          <a href="index.html"
+            ><img src="img/logo.png" alt="더 바디샵 로고"
+          /></a>
+        </h1>
+        <ul>
+          <li>
+            <a href="membership.html">Membership</a>
+          </li>
+          <li class="down">
+            <a href="community.html"
+              >Community<i class="fa-solid fa-chevron-down"></i
+            ></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+          </li>
+          <li class="bar">
+            <a href="#"><i class="fa-solid fa-bars"></i></a>
+          </li>
+        </ul>
+      </div>
+      <div class="menu_wrap">
+        <ul class="menu">
+          <li>
+            <a href="product.html">Product</a>
+            <ul class="sub_menu">
+              <li><a href="product.html">Best Seller</a></li>
+              <li><a href="product.html">All Products</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="oemocm.html">OEM·OCM</a>
+            <ul class="sub_menu">
+              <li><a href="oemocm.html">OEM</a></li>
+              <li><a href="oemocm.html">OCM</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="brandStory.html">Brand Story</a>
+            <ul class="sub_menu">
+              <li><a href="brandStory.html">Our Value</a></li>
+              <li><a href="brandStory.html">Vegan</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="membership.html">Membership</a>
+            <ul class="sub_menu">
+              <li><a href="membership.html">Benefit</a></li>
+              <li><a href="membership.html">Coupon</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="community.html">Community</a>
+            <ul class="sub_menu">
+              <li><a href="community.html">Contact Us</a></li>
+              <li><a href="community.html">FAQ</a></li>
+            </ul>
+          </li>
+        </ul>
+        <div class="close">
+          <a href="javascript:void(0)"><i class="fa-solid fa-xmark"></i></a>
+        </div>
+      </div>
+
+      <div class="mobile">
+        <h1>
+          <a href="index.html"
+            ><img src="img/logo.png" alt="더 바디샵 로고"
+          /></a>
+        </h1>
+        <ul>
+          <li>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+          </li>
+          <li class="bar">
+            <a href="#"><i class="fa-solid fa-bars"></i></a>
+          </li>
+        </ul>
+      </div>
     </header>
     <div class="title">
       <ul>
