--- a/index.html
+++ b/index.html
@@ -67,29 +67,29 @@
           <li>
             <a href="oemocm.html">OEM·OCM</a>
             <ul class="sub_menu">
-              <li><a href="oemocm.html">Best Seller</a></li>
-              <li><a href="oemocm.html">All Products</a></li>
+              <li><a href="oemocm.html">OEM</a></li>
+              <li><a href="oemocm.html">OCM</a></li>
             </ul>
           </li>
           <li>
             <a href="brandStory.html">Brand Story</a>
             <ul class="sub_menu">
-              <li><a href="brandStory.html">Best Seller</a></li>
-              <li><a href="brandStory.html">All Products</a></li>
+              <li><a href="brandStory.html">Our Value</a></li>
+              <li><a href="brandStory.html">Vegan</a></li>
             </ul>
           </li>
           <li>
             <a href="membership.html">Membership</a>
             <ul class="sub_menu">
-              <li><a href="membership.html">Best Seller</a></li>
-              <li><a href="membership.html">All Products</a></li>
+              <li><a href="membership.html">Benefit</a></li>
+              <li><a href="membership.html">Coupon</a></li>
             </ul>
           </li>
           <li>
             <a href="community.html">Community</a>
             <ul class="sub_menu">
-              <li><a href="community.html">Best Seller</a></li>
-              <li><a href="community.html">All Products</a></li>
+              <li><a href="community.html">Contact Us</a></li>
+              <li><a href="community.html">FAQ</a></li>
             </ul>
           </li>
         </ul>
