--- a/brandStory.html
+++ b/brandStory.html
@@ -2,6 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brand Story</title>
     <script src="js/jquery-3.7.1.min.js"></script>
