--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
         <li>
           <ul class="texture">
             <li>
-              <a href="#"><img src="img/texture3.png.png" alt="크림 제형" /></a>
+              <a href="#"><img src="img/texture3.jpg" alt="크림 제형" /></a>
             </li>
             <li>
-              <a href="#"><img src="img/texture1.png" alt="크림 제형" /> </a>
+              <a href="#"><img src="img/texture1.jpg" alt="크림 제형" /> </a>
               <p>MOISTURIZING</p>
             </li>
           </ul>
@@ -268,7 +268,7 @@
           <p>Cleansing care</p>
         </li>
         <li>
-          <a href="#"><img src="img/skincare3.PNG" alt="보습케어 이미지" /></a>
+          <a href="#"><img src="img/skincare3.jpg" alt="보습케어 이미지" /></a>
           <p>Moisturizing care</p>
         </li>
         <li>
