--- a/brandStory.html
+++ b/brandStory.html
@@ -22,7 +22,9 @@
     />
   </head>
   <body>
+    <!-- 헤더 영역 (로고, 내비 포함) -->
     <header>
+      <!-- pc 헤더 -->
       <div class="pc">
         <ul>
           <li><a href="product.html">Product</a></li>
@@ -94,6 +96,7 @@
         </div>
       </div>
 
+      <!-- mobile 헤더 -->
       <div class="mobile">
         <h1>
           <a href="index.html"
@@ -110,6 +113,8 @@
         </ul>
       </div>
     </header>
+
+    <!-- 메인 타이틀 (brandStory) -->
     <div class="title">
       <ul>
         <li>
@@ -124,6 +129,8 @@
         </li>
       </ul>
     </div>
+
+    <!-- 브랜드 가치 소개 -->
     <section class="con1">
       <h3>
         CHANGEMAKING <br />
@@ -160,6 +167,8 @@
         </p>
       </div>
     </section>
+
+    <!-- 베지테리언 & 비건 제품 소개 -->
     <section class="con2">
       <ul>
         <li>
@@ -184,6 +193,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 꾸밈 효과를 위한 흐르는 텍스트 -->
     <div class="marquee-container">
       <p class="marquee-text">
         Meet our skin-loving body moisturizers. From instantly absorbing body
@@ -196,6 +207,8 @@
         >
       </p>
     </div>
+
+    <!-- 푸터 영역 (회사 정보, 카테고리, SNS 링크) -->
     <footer>
       <ul>
         <li>
