--- a/community.html
+++ b/community.html
@@ -22,7 +22,9 @@
     />
   </head>
   <body>
+    <!-- 헤더 영역 (로고, 내비 포함) -->
     <header>
+      <!-- pc 헤더 -->
       <div class="pc">
         <ul>
           <li><a href="product.html">Product</a></li>
@@ -94,6 +96,7 @@
         </div>
       </div>
 
+      <!-- mobile 헤더 -->
       <div class="mobile">
         <h1>
           <a href="index.html"
@@ -110,6 +113,8 @@
         </ul>
       </div>
     </header>
+
+    <!-- 메인 타이틀 (community) -->
     <div class="title">
       <ul>
         <li>
@@ -120,6 +125,8 @@
         </li>
       </ul>
     </div>
+
+    <!-- 회사 Contact  -->
     <section class="con1">
       <h3>
         Get In Touch <br />
@@ -144,6 +151,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 자주묻는 질문(FAQ) -->
     <section class="con2">
       <h3>
         Frequently Asked <br />
@@ -210,12 +219,16 @@
         </li>
       </ul>
     </section>
+
+    <!-- 본사 주소 -->
     <section class="con3">
       <div class="wrap">
         <h3>The Body Shop Korea Office</h3>
         <p>401, Hakdong-ro, Gangnam-gu, Seoul, Republic of Korea</p>
       </div>
     </section>
+
+    <!-- 푸터 영역 (회사 정보, 카테고리, SNS 링크) -->
     <footer>
       <ul>
         <li>
