--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
+    <!-- 헤더 영역 (로고, 내비 포함) -->
     <header>
+      <!-- pc 헤더 -->
       <div class="pc">
         <ul>
           <li><a href="product.html">Product</a></li>
@@ -99,6 +101,7 @@
         </div>
       </div>
 
+      <!-- mobile 헤더 -->
       <div class="mobile">
         <h1>
           <a href="index.html"
@@ -115,6 +118,8 @@
         </ul>
       </div>
     </header>
+
+    <!-- 비쥬얼 영역 -->
     <div class="visual">
       <div class="wrap">
         <h2>Body, Your Life</h2>
@@ -122,6 +127,8 @@
         <img src="img/visual.JPG" alt="" />
       </div>
     </div>
+
+    <!-- 상품 레이아웃 (추천 상품, 베스트셀러)-->
     <section class="con1">
       <h3>Our Solution</h3>
       <ul>
@@ -143,6 +150,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 상품 레이아웃 (신상품 라인업)-->
     <section class="con2">
       <h3>
         Whole <span class="bg_y">body care</span> is about <br />
@@ -192,6 +201,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 꾸밈 효과를 위한 흐르는 텍스트 -->
     <div class="marquee-container">
       <p class="marquee-text">
         Meet our skin-loving body moisturizers. From instantly absorbing body
@@ -204,6 +215,8 @@
         >
       </p>
     </div>
+
+    <!-- 상품 레이아웃 (비건, 저자극 제품)-->
     <section class="con3">
       <ul>
         <li>
@@ -254,6 +267,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 상품 레이아웃 (카테고리별 상품)-->
     <section class="con4">
       <h3>Treat Your Skin Concern with The Body Shop</h3>
       <ul>
@@ -281,6 +296,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 푸터 영역 (회사 정보, 카테고리, SNS 링크) -->
     <footer>
       <ul>
         <li>
