--- a/membership.html
+++ b/membership.html
@@ -22,7 +22,9 @@
     />
   </head>
   <body>
+    <!-- 헤더 영역 (로고, 내비 포함) -->
     <header>
+      <!-- pc 헤더 -->
       <div class="pc">
         <ul>
           <li><a href="product.html">Product</a></li>
@@ -94,6 +96,7 @@
         </div>
       </div>
 
+      <!-- mobile 헤더 -->
       <div class="mobile">
         <h1>
           <a href="index.html"
@@ -110,6 +113,8 @@
         </ul>
       </div>
     </header>
+
+    <!-- 메인 타이틀 (membership) -->
     <div class="title">
       <ul>
         <li>
@@ -127,6 +132,8 @@
         </li>
       </ul>
     </div>
+
+    <!-- 멤버십 혜택 안내 -->
     <section class="con1">
       <h3>
         LOVE YOUR BODY<span></span> with<br />
@@ -144,6 +151,8 @@
         <h4>Keep your body for a long time</h4>
       </div>
     </section>
+
+    <!-- 멤버십 등급 안내 -->
     <section class="con2">
       <ul class="line">
         <li></li>
@@ -207,6 +216,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 멤버십 쿠폰 배너 -->
     <section class="con3">
       <ul>
         <li>
@@ -226,6 +237,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 푸터 영역 (회사 정보, 카테고리, SNS 링크) -->
     <footer>
       <ul>
         <li>
