--- a/oemocm.html
+++ b/oemocm.html
@@ -22,7 +22,9 @@
     />
   </head>
   <body>
+    <!-- 헤더 영역 (로고, 내비 포함) -->
     <header>
+      <!-- pc 헤더 -->
       <div class="pc">
         <ul>
           <li><a href="product.html">Product</a></li>
@@ -94,6 +96,7 @@
         </div>
       </div>
 
+      <!-- mobile 헤더 -->
       <div class="mobile">
         <h1>
           <a href="index.html"
@@ -110,6 +113,8 @@
         </ul>
       </div>
     </header>
+
+    <!-- 메인 타이틀 (oemocm) -->
     <div class="title">
       <ul>
         <li>
@@ -118,6 +123,8 @@
         <li></li>
       </ul>
     </div>
+
+    <!-- 공정 무역 프로그램 소개 -->
     <section class="con1">
       <h3>
         CHANGEMAKING FOR COMMUNITIES: <br /><span> 모두를 위한 변화</span>
@@ -163,6 +170,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 천연 원료 & 공정 무역 -->
     <section class="con2">
       <ul>
         <li>
@@ -182,6 +191,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 개발 프로세스 -->
     <section class="con3">
       <div class="wrap">
         <h3>개발프로세스</h3>
@@ -204,6 +215,8 @@
         </ul>
       </div>
     </section>
+
+    <!-- 푸터 영역 (회사 정보, 카테고리, SNS 링크) -->
     <footer>
       <ul>
         <li>
