--- a/product.html
+++ b/product.html
@@ -22,7 +22,9 @@
     />
   </head>
   <body>
+    <!-- 헤더 영역 (로고, 내비 포함) -->
     <header>
+      <!-- pc 헤더 -->
       <div class="pc">
         <ul>
           <li><a href="product.html">Product</a></li>
@@ -94,6 +96,7 @@
         </div>
       </div>
 
+      <!-- mobile 헤더 -->
       <div class="mobile">
         <h1>
           <a href="index.html"
@@ -110,6 +113,8 @@
         </ul>
       </div>
     </header>
+
+    <!-- 메인 타이틀 (product) -->
     <div class="title">
       <ul>
         <li>
@@ -126,6 +131,8 @@
         </li>
       </ul>
     </div>
+
+    <!-- 원료소개 -->
     <section class="con1">
       <ul>
         <li>
@@ -152,6 +159,8 @@
         </li>
       </ul>
     </section>
+
+    <!-- 꾸밈 효과를 위한 흐르는 텍스트 -->
     <div class="marquee-container">
       <p class="marquee-text">
         Meet our skin-loving body moisturizers. From instantly absorbing body
@@ -164,6 +173,8 @@
         >
       </p>
     </div>
+
+    <!-- 자연유래성분 안내 -->
     <section class="con2">
       <ul>
         <li>
@@ -179,7 +190,7 @@
                 안전성을 강화하기 위해 <br />특정 방법을 통해 가공된 것입니다.
               </p>
               <a href="#"
-                ><img src="img/texture2.png.png" alt="앰플 질감이미지"
+                ><img src="img/texture3.jpg" alt="앰플 질감이미지"
               /></a>
             </li>
             <li>
@@ -192,12 +203,16 @@
         </li>
       </ul>
     </section>
+
+    <!-- 배너 -->
     <section class="con3">
       <div class="wrap">
         <h3>"The effect of tea tree on your skin."</h3>
         <p>Meet the Small but Powerful Tea Tree!</p>
       </div>
     </section>
+
+    <!-- 푸터 영역 (회사 정보, 카테고리, SNS 링크) -->
     <footer>
       <ul>
         <li>
